# boolean-enums

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: lib.rs
test/: Makefile
test/nostdtest/: Cargo.toml
test/nostdtest-serde/: Cargo.toml
test/nostdtest-serde/src/: lib.rs
test/nostdtest/src/: lib.rs
