[package]
name = "boolean-enums"
version = "0.3.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]
description = "Generate enums with Yes and No variants.  Supports no_std and serde."
repository = "https://github.com/dmnsafonov/boolean-enums"
readme = "README.md"
keywords = ["bool", "boolean", "enum", "no", "yes"]
categories = ["no-std", "rust-patterns"]
license = "LGPL-3.0-only"

exclude = ["test/"]

[features]
default = ["std"]
std = []

[dependencies.serde]
version = "^1.0.15"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
toml = "^0.4.6"

[badges]
travis-ci = { repository = "dmnsafonov/boolean-enums" }
