[package]
name = "boolean-enums"
version = "0.4.1"
edition = "2024"
authors = ["Dmitrii Safonov <domi@domisafonov.net>"]
description = "Generate enums with Yes and No variants.  Supports no_std and serde."
repository = "https://github.com/domisafonov/boolean-enums"
readme = "README.md"
keywords = ["bool", "boolean", "enum", "no", "yes"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

exclude = ["test/"]

[features]
default = ["std"]
std = []

[dependencies.serde]
version = "^1.0.228"
default-features = false
optional = true

[dev-dependencies]
toml = "0.9.8"
